# toolbox-iop

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
.trae/documents/: plan_20260130_131413.md
src/cli/: print_cli.py
src/toolbox_iop/: __init__.py  json_check_tools.py  json_tools.py  logger_tools.py  print_tools.py  string_tools.py
src/toolbox_iop/cli/: __init__.py  check_cli.py  count_cli.py  print_cli.py
tests/: generate_test_data.py  test_count_cli.py  test_json_check_tools.py  test_json_tools.py  test_ujson_performance.py
tests/fixtures/: test_json_dict.json  test_json_list.json  test_jsonl_100lines.jsonl  test_jsonl_10lines.jsonl  test_single_line.json
