[project]
name = "toolbox-iop"
version = "0.1.2"
description = "The toolbox for json load save and print, you may find more function in the future."
readme = "README.md"
authors = [
    { name = "scorpion_free", email = "scorpion_free@qq.com" }
]
requires-python = ">=3.6"
dependencies = [
    "rich>=10.11.0",
    "tqdm>=4.64.1",
]

[project.scripts]
toolbox-iop-print = "toolbox_iop.cli:print_main"
toolbox-iop-check-jid = "toolbox_iop.cli:check_jid"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

