[project]
name = "toolbox-iop"
version = "0.1.6"
description = "The toolbox for json load save and print, you may find more function in the future."
readme = "README.md"
authors = [
    { name = "scorpion_free", email = "scorpion_free@qq.com" }
]
requires-python = ">=3.7"
dependencies = [
    "json-repair>=0.25.3",
    "rich>=10.11.0",
    "tqdm>=4.64.1",
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
toolbox-iop-print = "toolbox_iop.cli:print_main"
toolbox-iop-duplicate = "toolbox_iop.cli:check_main"
toolbox-iop-count = "toolbox_iop.cli:count_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

